# django-comptabilite-ohada

./: LICENSE  README.md  pyproject.toml
comptabilite_ohada/: __init__.py  admin.py  apps.py  defaults.py  permissions.py  selectors.py  urls.py
comptabilite_ohada/api/: serializers.py  urls.py  views.py
comptabilite_ohada/constants/: syscohada.py
comptabilite_ohada/data/: plan_comptable.json
comptabilite_ohada/integrations/: __init__.py  django_comptes.py
comptabilite_ohada/management/commands/: charger_plan_comptable.py
comptabilite_ohada/models/: __init__.py  amortissement.py  compte.py  configuration.py  ecriture.py  exercice.py  journal.py  rapprochement.py
comptabilite_ohada/rules/: engine.py  tresorerie.py  vente.py
comptabilite_ohada/services/: __init__.py  amortissement_service.py  bilan_service.py  dashboard_service.py  ecriture_service.py  exercice_service.py  export_service.py  initialisation_service.py  journal_service.py  rapprochement_service.py
comptabilite_ohada/signals/: __init__.py  ecriture.py
comptabilite_ohada/templates/comptabilite_ohada/: balance.html  base.html  bilan.html  compte_detail.html  compte_list.html  compte_resultat.html  dashboard.html  ecriture_confirm_delete.html  ecriture_detail.html  ecriture_form.html  ecriture_list.html  exercice_detail.html  exercice_form.html  exercice_list.html  grand_livre.html  immobilisation_detail.html  immobilisation_list.html  journal_detail.html  journal_list.html  rapprochement_detail.html  (+1 more)
comptabilite_ohada/templatetags/: __init__.py
comptabilite_ohada/tests/: test_initialisation.py  test_journal_service.py  test_models.py  test_services.py
comptabilite_ohada/views/: views_amortissements.py  views_bilan.py  views_comptes.py  views_dashboard.py  views_ecritures.py  views_exercices.py  views_exports.py  views_journaux.py  views_rapprochement.py
